tests/bad/map_literal_shorthand_bad_value_type.oc
/// fail: Couldn't find this identifier: Foo

def main() {
    let mp: ${i32: Foo}
}